# k8s-logger

./: .gitignore  ChangeLog.md  LICENSE  Makefile.am  README.md  configure.ac  log.c  log.h  main.c
.github/workflows/: build.yml  release.yml
